crates/toml_edit/tests/snapshots/invalid/inline-table/duplicate-key-03.stderr
TOML parse error at line 1, column 42
  |
1 | tbl = { fruit = { apple.color = "red" }, fruit.apple.texture = { smooth = true } }
  |                                          ^^^^^
duplicate key
